# Maestria

./: .gitattributes  .gitignore  README.md  pregunta_5_nestle.py  pyproject.toml
4_computer_vision/codigo/: pyproject.toml  requirements.txt
4_computer_vision/codigo/10_sesion_11_fine_tuning/: Sesion11A_FineTuning_ObjectDetection.ipynb  Sesion11A_Segmentacion_de_Objetos.ipynb  Sesion11B_Segmentacion_en_video.ipynb  Sesion11C_FineTuningMBD.ipynb
4_computer_vision/codigo/1_sesion_1/: Sesion1.ipynb
4_computer_vision/codigo/2_sesion_4_regresion_logistica/: Sesion04_regresion_logistica_images.ipynb
4_computer_vision/codigo/4_sesion_3_hsv_rl/: Sesion03_HSV.ipynb  Sesion03_regresion_logistica.ipynb
4_computer_vision/codigo/5_laboratorio_calificado_2/: Tarea_2_Computer_Vision.ipynb
4_computer_vision/codigo/6_laboratorio_calificado_3/: Tarea3_Computer_Vision.ipynb  run_on_slurm.sbatch  tarea_3_cv_script.py  vgg16_fer2013.pth
4_computer_vision/codigo/7_gans_celeba/models/: dcgan_disc_celebA.pth  dcgan_gen_celebA.pth
4_computer_vision/codigo/8_laboratorio_calificado_4/: Laboratorio_4_VC_mateo.ipynb  bccd.yaml  lab_4_yolo_finetuning_script.py  laboratorio_4_yolo_finetuning_bccd.ipynb  resultados_finales_gridsearch.csv  resultados_parciales_gridsearch.csv  slurm_lab_4_yolo.sbatch
4_computer_vision/codigo/9_laboratorio_calificado_5/: Laboratorio_5_VC_mateo.ipynb
4_hpc/codigo/: pyproject.toml
4_hpc/codigo/10_matrix_multiplication_tarea/: matmul_mpi_torch.py  matrix_mult_logs_stats.ipynb  metrics_summary.csv  mm.sh  run_matmul.sh
4_hpc/codigo/10_matrix_multiplication_tarea/logs/: matmul_19865_0.out  matmul_19865_1.out  matmul_19865_10.out  matmul_19865_11.out  matmul_19865_12.out  matmul_19865_13.out  matmul_19865_14.out  matmul_19865_15.out  matmul_19865_16.out  matmul_19865_17.out  matmul_19865_18.out  matmul_19865_19.out  matmul_19865_2.out  matmul_19865_20.out  matmul_19865_21.out  matmul_19865_22.out  matmul_19865_23.out  matmul_19865_24.out  matmul_19865_25.err  matmul_19865_25.out  matmul_19865_26.out  matmul_19865_27.out  matmul_19865_28.out  matmul_19865_29.out  matmul_19865_3.out  matmul_19865_30.out  matmul_19865_31.out  matmul_19865_32.out  matmul_19865_33.out  matmul_19865_34.out  matmul_19865_35.out  matmul_19865_36.err  matmul_19865_36.out  matmul_19865_37.err  matmul_19865_37.out  matmul_19865_38.err  matmul_19865_38.out  matmul_19865_39.err  matmul_19865_39.out  matmul_19865_4.out  (+21 more)
4_hpc/codigo/11_ec02_kmeans/: .~lock.df_ec02_kmeans.csv#  Kmeans_mpi.py  Kmeans_mpi.sh  df_ec02_kmeans.csv  ec02_dev.ipynb  parse_kmeans_logs.py
4_hpc/codigo/11_ec02_kmeans/logs/: kmeans_22174_1.out  kmeans_22174_2.out  kmeans_22174_3.out  kmeans_22174_4.out  kmeans_22174_5.out  (+31 more)
4_hpc/codigo/1_mm_tarea_1/: mm_numpy.py  mm_openmp.cpp
4_hpc/codigo/2_semana_4/: .mm.sh.swo  mm.sh  mm_openmp  mm_openmp.cpp
4_hpc/codigo/5_EC01/: Resultados_grid_10k.csv  analytics.ipynb  analytics2.ipynb  analytics_new_graph.ipynb  pregunta_ocho.ipynb  resultados_grouped_measures.csv  rnn_joblib.py  rnn_joblib.sh  rnn_joblib_ex5.py  rnn_joblib_ex5.sh  slurm-14793.out
4_hpc/codigo/6_proyecto_final/: analytics_create_plots.py  entrega_parcial.tex  heat-big.c  heat-mpi-big.c  heat-mpi-big2.c  heat_mpi_big.txt  references.bib  run_heat.sh  run_heat.txt
4_hpc/codigo/8_knn_mpi/: knn_mpi.py  knn_mpi.sh
(+1242 files in other folders)
