[project]
name = "collabnotebooks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cvxopt>=1.3.2",
    "duckdb>=1.3.0",
    "fastexcel>=0.14.0",
    "google>=3.0.0",
    "httpx>=0.28.1",
    "jsonschema>=4.24.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "office365-rest-python-client>=2.6.2",
    "pandas==2.2.3",
    "polars>=1.30.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "xlsxwriter>=3.2.3",
]
