[project]
name = "codigo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "duckdb>=1.4.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
