[project]
name = "docker-uv-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "psycopg[binary]>=3.3.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
]
